--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -41,6 +41,7 @@
 
 .chat__message {
   position: relative;
+  margin-bottom: 30px;
   font-size: 16px;
   padding: 10px;
   border-radius: 10px;
@@ -85,8 +86,11 @@
 .chat__footer > form > input {
   flex: 1;
   border-radius: 30px;
-  padding: 10px;
+  padding: 10px 15px;
   border: none;
+}
+.chat__footer > form > input:focus {
+  outline: none;
 }
 .chat__footer > form > button {
   display: none;
